--- a/index.html
+++ b/index.html
@@ -6,20 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 6</title>
     <link rel="stylesheet" href="./style.css">
+    
 </head>
 <body>
     <header>
         <nav>
             <img src="./assets/white-logo.png" alt="white-logo" class="img">
-            <ul>
+            <ul class="ulList">
                 <li>Home</li>
                 <li>Pricing</li>
                 <li>Contact</li>
                 <li>Terms and Conditions</li>
                 <li><button class="navButton">Get Started</button></li>
             </ul>
+            <div class="hamAndCross">
+                <img class="hamburger" id="hamburger" src="./assets/icons8-hamburger-32.png" alt="icons8-hamburger-32">
+                <img class="cross" id="cross" src="./assets/icons8-multiply-30.png" alt="icons8-multiply-30">
+            </div>
         </nav>
     </header>
+    <div class="meanu" id="meanu">
+        <ul>
+            <li>Home</li>
+            <li>Pricing</li>
+            <li>Contact</li>
+            <li>Terms and Conditions</li>
+            <li><button class="navButton">Get Started</button></li>
+        </ul>
+    </div>
     <main>
         <div class="content">
             <h1>Your Justice Is our Top Priority</h1>
@@ -27,5 +41,7 @@
         </div>
         <img src="./assets/banner.png" alt="banner" class="banner">
     </main>
+
+    <script src="./script.js"></script>
 </body>
 </html>
